Added -XX:+AggressiveOpts flag